# hexapod_rl

./: README.md  dockerfile
hexapod_rl/: CMakeLists.txt  README.md  package.xml  setup.py
hexapod_rl/hexapod_rl/: inference_reward_action_plotter.py  loss_logger.py  phantomx_env.py  phantomx_env2.py  ppo_loss_logger.py  reward_plot.py  reward_plot_headless.py
hexapod_rl/launch/: phantomx_gazebo.launch  phantomx_gazebo_combined.launch  phantomx_gazebo_headless_combined.launch
hexapod_rl/scripts/: hexapod_rl_ppo_training.py  hexapod_rl_ppo_training_headless.py  hexapod_rl_training.py  hexapod_rl_training_headless.py  phantomx_camera.py  rl_inference.py  rl_ppo_inference.py
hexapod_rl/worlds/: hexapo_world.world  hexapod_world.world
